# prod-rag-pipeline

./: Dockerfile  Dockerfile.airflow  README.md  docker-compose.datalake.yml  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.airflow.txt  requirements.txt
configs/: data_sources_example.json  milvus.yaml  prometheus.yml
configs/grafana/dashboards/: rag-dashboard.json
configs/grafana/datasources/: prometheus.yml
dags/: data_ingestion_dag.py
demo-data/articles/business/: ai-startup-funding.txt
demo-data/articles/science/: alzheimers-gene-therapy.txt  cancer-treatment-breakthrough.txt
demo-data/articles/technology/: ai-breakthrough-2024.txt  autonomous-vehicles.txt  quantum-breakthrough.txt
demo-data/customer-data/: product-reviews.json  support-tickets.json
demo-data/documentation/api/: enterprise-ai-api.md
demo-data/documentation/guides/: user-guide.md
demo-data/products/: catalog.csv  catalog.json
demo-data/research-papers/: abstracts.json
scripts/: deploy_jetson.sh  run_api.sh  start_datalake.sh  start_services.sh  stop_services.sh
sql/: init.sql
src/prod_rag/: __init__.py
src/prod_rag/api/: __init__.py  endpoints.py  main.py
src/prod_rag/core/: __init__.py  config.py  embeddings.py  rag_engine.py  vector_store.py
src/prod_rag/data/: __init__.py  ingestion.py  loaders.py
tutorials/: README.md  quick-start.sh
tutorials/demo-data/: create_demo_data.py  test_streaming.py
tutorials/getting-started/: data-lake-setup.md  data-to-chat-complete-guide.md  streaming-setup.md
(+12 files in other folders)
